# mihomo-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  Changes.md  LICENSE  README.md  TODO.md  build.rs  install.sh  rustfmt.toml  ui-design.md
.cargo/: config.toml
.config/: config.yaml  core-config.schema.json
.github/workflows/: ci.yml  manual-build.yaml  release.yaml
docs/vhs/: demo.tape  gen.sh
src/: action.rs  api.rs  app.rs  app_message.rs  cli.rs  components.rs  config.rs  error.rs  errors.rs  logging.rs  main.rs  palette.rs  panic.rs  tui.rs  version_update.rs
src/api/: endpoints.rs  github.rs  local_api_tests.rs  mod.rs  stream.rs  test_support.rs  tests.rs
src/components/: backend_config_component.rs  columns.rs  connection_batch_terminate_component.rs  connection_detail_component.rs  connection_terminate_component.rs  connections.rs  connections_component.rs  core_config_component.rs  dns_query_component.rs  filter_component.rs  footer_component.rs  header_component.rs  help_component.rs  highlight.rs  logs.rs  logs_component.rs  mod.rs  msg_box_component.rs  overlay.rs  overview_component.rs  proxies.rs  proxies_component.rs  proxy_detail_component.rs  proxy_provider_detail_component.rs  proxy_providers.rs  proxy_providers_component.rs  proxy_setting.rs  proxy_setting_component.rs  root_component.rs  rule_providers.rs  rule_providers_component.rs  rules.rs  rules_component.rs  search_component.rs  shortcut.rs  state.rs  updates_component.rs
src/components/connections_setting_component/: columns.rs  mod.rs  source_ip_alias.rs
src/config/: deserialize.rs  mod.rs  runtime.rs  schema.rs  tests.rs  validate.rs
src/models/: connection.rs  core_config.rs  dns.rs  log.rs  memory.rs  mod.rs  provider.rs  proxy.rs  proxy_provider.rs  rule.rs  rule_provider.rs  search_query.rs  sort.rs  traffic.rs  version.rs
src/store/: connections.rs  connections_setting.rs  logs.rs  mod.rs  proxies.rs  proxy_providers.rs  proxy_setting.rs  query.rs  rule_providers.rs  rules.rs
src/utils/: axis.rs  byte_size.rs  columns.rs  editor.rs  input.rs  matcher.rs  mod.rs  row_filter.rs  rule_parser.rs  symbols.rs  test.rs  text_ui.rs  time.rs  tui_input.rs
src/utils/filter/: mod.rs  parser.rs  pattern.rs  row.rs
src/utils/json5_formatter/: formatter.rs  mod.rs  schema.rs
src/widgets/: button.rs  latency.rs  mod.rs  scrollable_navigator.rs  scrollbar.rs  shortcut.rs
