[package]
name = "mihomo-tui"
version = "0.3.1"
repository = "https://github.com/potoo0/mihomo-tui"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.99"
better-panic = "0.3.0"
circular-buffer = "1.1.0"
clap = { version = "4.5.45", features = ["env", "derive", "wrap_help", "string", "cargo"] }
console-subscriber = "0.5.0"
const_format = "0.2.34"
crossterm = { version = "0.29.0", features = ["event-stream"] }
delegate = "0.13"
directories = "6.0.0"
futures-util = "0.3.31"
fuzzy-matcher = "*"
human-panic = "2.0.3"
indexmap = { version = "2", features = ["serde"] }
json5 = "1.3"
libc = "0.2.175"
ratatui = { version = "0.30.0", features = ["crossterm"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "charset",
    "http2",
    "system-proxy",
    "json",
    "query",
    "rustls"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*", features = ["preserve_order"] }
serde_yaml_ng = "0.10.0"
signal-hook = "0.4.1"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3"
throbber-widgets-tui = "0.10.0"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.47.1", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.28.0", features = ["url"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tui-input = "0.15.0"
unicode-segmentation = "1.12.0"
url = { version = "2.5.7", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.99"
vergen-gix = { version = "9.1.0", features = ["build", "cargo"] }
